# wavping

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/workflows/: linux-conda.yml  macos-conda.yml  windows-conda.yml
examples/: generate_ping.py  play_ping.py
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/wavping/: __init__.py  __main__.py  _core.cpp  miniaudio_glue.c
tests/: test_api.py
